--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,3 +1,4 @@
+{{define "base.html"}}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,3 +34,4 @@
     {{block "content" .}}{{end}} {{block "scripts" .}}{{end}}
   </body>
 </html>
+{{end}}
